Prevent page jump when accessing search box.
The search box appears when a :target selector is active on the #search
element, having been triggered by clicking the a link. This commit
prevents the anchor targetting and instead adds a .target class to the
`#search` element. This degrades to the old behaviour in the absence of
javascript.

--- a/rtei/static/css/rtei.css
+++ b/rtei/static/css/rtei.css
@@ -918,13 +918,13 @@ body {
         position: absolute;
         top: 30px;
         right: 0; } }
-  #smenu #search:target > a:first-of-type {
+  #smenu #search:target > a:first-of-type, #smenu #search.target > a:first-of-type {
     display: none; }
-  #smenu #search:target > a:last-of-type {
+  #smenu #search:target > a:last-of-type, #smenu #search.target > a:last-of-type {
     display: inline-block;
     background-color: #595a5b;
     color: #fff; }
-  #smenu #search:target > .search {
+  #smenu #search:target > .search, #smenu #search.target > .search {
     display: block; }
   #smenu #search input,
   #smenu #search button {
