--- a/rtei/static/scss/_nav.scss
+++ b/rtei/static/scss/_nav.scss
@@ -231,7 +231,7 @@
       }
     }
 
-    &:target {
+    &:target, &.target {
       & > a:first-of-type {
         display: none;
       }
